...
            GlyphFamily.entries.forEachIndexed { index,f ->
                SegmentedButton(
                    selected=family==f,
                    onClick={family=f},
                    shape=SegmentedButtonDefaults.itemShape(index,GlyphFamily.entries.size),
                    label={ Text(when(f){
                        GlyphFamily.COLORED_CIRCLE->"Круги"
                        GlyphFamily.COLORED_TRIANGLE->"Треуг."
                        GlyphFamily.COLORED_SQUARE->"Квадраты"
                        GlyphFamily.BLACK_DOT->"Точки"
                        GlyphFamily.BLACK_STICK->"Палочки"
                        GlyphFamily.BLACK_OUTLINE->"Контуры"
                    }) },
...
